--- a/YY-HB/oder.v1.0/oder.v1.0/目录结构.md
+++ b/YY-HB/oder.v1.0/oder.v1.0/目录结构.md
@@ -20,18 +20,26 @@ components	组件
 ```
 ## basic			//主题类基础
 	cartbox			//购物车小组件
+		get-btn-item
+		goods-group
 	ourstock		//库存
+		goods-group
+		goods-stock
 	addr-list		//添加地址
 	btn-foot 		//底部按钮
 	c-input			//密码
+	couponItem		//优惠券
 	default-page	//页面加载、无数据、出错等
 	news-list		//推送消息列表
 	welcome			//欢迎页页
 
 ## BuyMall
 	mall-cart		//购物车大组件 	
+	PayNow			//支付弹窗控件
+	PrePayList		//上一笔未支付订单
 	rk-pop			//支付选项
-	
+## maps		
+	myMap			//配送地图
 
 ## echarts
 	access-nums		//访客分析
@@ -48,12 +56,28 @@ components	组件
 ## uni
 	uni-badge			//标记
 	uni-fav				//收藏 
+	uni-icons			//图标
 	uni-list-item		//设置类的列表
 	uni-nav-bar			//模拟导航
 	uni-popup			//弹出层
+	uni-qrcode			//二维码生成
 	uni-status-bar		//模拟顶部状态栏
 
 ## uni-calendar			//日历选择
+	calendar
+	uni-calendar
+	uni-calendar-item
+	util
+## uni-collapse
+	uni-collapse
+	uni-collapse-item
+```
+
+hybrid  弹出原生窗口 默认位置webview
+
+```
+html	
+	e_contract
 ```
 
 network	网络
@@ -70,24 +94,13 @@ requrest				//网络请求
 pages	页面
 
 ```
-## utility				//app功能页
-	about				//关于
-	index				//首页
-	mall				//平台商城
-		mall			//商家下单
-		pop				//选择支付类型
-		prepay			//预支付
-	manage				//营运管理		
-	shop
-    	code			//商户码		
-    	sign			//店铺图片	
-	stock				//商家库存		 
 
-## account				//商家账号类	
+## account				//商家账号类			
+	authid				//绑定第三方授权
+	coupon				//优惠券管理
 	option				//设置			
 	login				//登录			
-	passwd				//密码				
-	authid				//绑定第三方授权
+	passwd				//密码		
 
 ## platform
 	fresh				//商家商城		
@@ -97,6 +110,9 @@ pages	页面
 	
  
 ## finance				//商家财务
+    agent
+    	agent			//代放管理
+    	agent_detail	//代放详情
 	outlay				//支出			
 		list			//商家订单
 		list_detal		//商家订单详情
@@ -106,14 +122,28 @@ pages	页面
 			unity_detail
 		firm			//企业订单			
 			firm		
-    agent
-    	agent			//代放管理
-    	agent_detail	//代放详情
-
+            
+## payment			//支付
+        payment				//管理
+        setup				//设置 
+        
+## utility				//app功能页
+	about				//关于
+	helper				//帮助中心
+	index				//首页
+	loading				//欢迎页
+	mall				//平台商城
+		mall			//商家下单
+		pop				//选择支付类型
+		prepay			//预支付
+	manage				//营运管理		
+	shop
+    	code			//商户码		
+    	sign			//店铺图片	
+	stock				//商家库存	
+	
 ## wallet				//资金流水
 		entry			//收款记录		
-		report			//经营报表			
-			report		//报表 
         moeny			//提现			
 			moeny		//钱包-可用or不可用			 
 			check		//确认提现-提交并选账户类型			 
@@ -121,14 +151,12 @@ pages	页面
 			record		//提现记录-list
 		rebate
 			rebate 		//代放分润
+		report			//经营报表			
+			report		//报表 			
 		type			//提现类型 
 			brand		//银行卡
 			
 			
-		 
-## payment			//支付
-        payment				//管理
-        setup				//设置 
 		
 	
 
